@@ -659,12 +659,6 @@ struct JobUpdateSettings {
   /** Max number of FAILED instances to tolerate before terminating the update. */
   3: i32 maxFailedInstances
 
-  /**
-   * Max time to wait until an instance reaches RUNNING state.
-   * Note: Deprecated in 0.11.0.
-   */
-  4: i32 maxWaitToInstanceRunningMs
-
   /** Min time to watch a RUNNING instance. */
   5: i32 minWaitInInstanceRunningMs
 
