@@ -27,7 +27,6 @@ class MesosContext(Struct):
 
 class UpdateConfig(Struct):
   batch_size                  = Default(Integer, 1)
-  restart_threshold           = Default(Integer, 60)
   watch_secs                  = Default(Integer, 45)
   max_per_shard_failures      = Default(Integer, 0)
   max_total_failures          = Default(Integer, 0)
