@@ -49,7 +49,6 @@
       update_group_size,
       max_per_instance_failures,
       max_failed_instances,
-      max_wait_to_instance_running_ms,
       min_wait_in_instance_running_ms,
       rollback_on_failure,
       wait_for_batch_completion,
@@ -67,7 +66,6 @@
       #{instructions.settings.updateGroupSize},
       #{instructions.settings.maxPerInstanceFailures},
       #{instructions.settings.maxFailedInstances},
-      #{instructions.settings.maxWaitToInstanceRunningMs},
       #{instructions.settings.minWaitInInstanceRunningMs},
       #{instructions.settings.rollbackOnFailure},
       #{instructions.settings.waitForBatchCompletion},
@@ -343,7 +341,6 @@
       u.update_group_size AS jui_juse_update_group_size,
       u.max_per_instance_failures AS jui_juse_max_per_instance_failures,
       u.max_failed_instances AS jui_juse_max_failed_instances,
-      u.max_wait_to_instance_running_ms AS jui_juse_max_wait_to_instance_running_ms,
       u.min_wait_in_instance_running_ms AS jui_juse_min_wait_in_instance_running_ms,
       u.rollback_on_failure AS jui_juse_rollback_on_failure,
       u.wait_for_batch_completion AS jui_juse_wait_for_batch_completion,
@@ -396,7 +393,6 @@
       u.update_group_size AS juse_update_group_size,
       u.max_per_instance_failures AS juse_max_per_instance_failures,
       u.max_failed_instances AS juse_max_failed_instances,
-      u.max_wait_to_instance_running_ms AS juse_max_wait_to_instance_running_ms,
       u.min_wait_in_instance_running_ms AS juse_min_wait_in_instance_running_ms,
       u.rollback_on_failure AS juse_rollback_on_failure,
       u.wait_for_batch_completion AS juse_wait_for_batch_completion,
