@@ -32,6 +32,9 @@
 - Removed scheduler flag `-extra_modules`.
 - Deprecated `TaskQuery` argument in `killTasks` thrift RPC to disallow killing tasks across
   multiple roles. The new safer approach is using `JobKey` with `instances` instead.
+- Removed the deprecated 'JobUpdateSettings.maxWaitToInstanceRunningMs' thrift api field (
+  UpdateConfig.restart_threshold in client-side configuration). This aspect of job restarts is now
+  controlled exclusively via the client with `aurora job restart --restart-threshold=[seconds]`.
 
 0.11.0
 ------
